plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.gradleup.shadow' version '9.5.1'
}

checkstyle {
    toolVersion = '14.1.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    String jUnitVersion = '5.14.4'

    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.4'
}

javafx {
    version = '25'
    modules = ['javafx.controls', 'javafx.fxml']
}

test {
    useJUnitPlatform()

    testLogging {
        events 'passed', 'skipped', 'failed'

        showExceptions = true
        exceptionFormat = 'full'
        showCauses = true
        showStackTraces = true
        showStandardStreams = false
    }
}

application {
    mainClass = 'stewie.ui.gui.StewieApplication'
}

jar {
    // A lean JAR file (i.e., without the dependencies packaged inside) is not needed.
    enabled = false
    // Rename its output anyway; Gradle forbids it clashing with the shadowJar output file, even for a disabled task.
    archiveClassifier = 'without-dependencies'
}

shadowJar {
    archiveFileName = 'stewie.jar'
}

run {
    standardInput = System.in
    jvmArgs '--enable-native-access=javafx.graphics'
}

tasks.register('runCli', JavaExec) {
    group = 'application'
    description = 'Runs the Stewie command-line application.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'stewie.Stewie'
    standardInput = System.in
}

tasks.register('runFx', JavaExec) {
    group = 'application'
    description = 'Runs the JavaFX application.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'stewie.ui.gui.StewieApplication'
    doFirst {
        def javafxJars = classpath.filter { file ->
            file.name.startsWith('javafx-') && file.name.endsWith('.jar')
        }
        classpath = classpath.filter { file ->
            !(file.name.startsWith('javafx-') && file.name.endsWith('.jar'))
        }
        jvmArgs '--module-path', javafxJars.asPath, '--add-modules', 'javafx.controls,javafx.fxml',
                '--enable-native-access=javafx.graphics'
    }
}
